<resources>
    <!--アプリ名-->
    <string name="app_name">島根大学\n講義情報</string>

    <!--OKボタンのテキスト-->
    <string name="button_ok">OK</string>

    <!--検索フォームのボタン-->
    <string name="button_clear">クリア</string>
    <string name="button_search">検索</string>

    <!--タイトルバーのテキスト-->
    <string name="title_syllabus_form">シラバス検索</string>
    <string name="title_syllabus_search_result">検索結果</string>
    <string name="title_syllabus_view">シラバス参照</string>
    <string name="title_building_list">教室配当表</string>
    <string name="title_places_search_mode">教室配当表</string>
    <string name="title_all_places_list">教室配当表</string>
    <string name="title_places_search_form">教室検索</string>
    <string name="title_places_search_result">検索結果</string>
    <string name="title_cancellation_info">休講情報</string>

    <!--ホームのボタン-->
    <string name="home_bt1">シラバス</string>
    <string name="home_bt2">教室配当表</string>
    <string name="home_bt3">休講情報</string>
    <string name="home_bt4">データ更新</string>

    <!--シラバス検索のフォームの項目名-->
    <string name="syllabus_department">学部</string>
    <string name="syllabus_course">科目分類</string>
    <string name="syllabus_class_name">授業名称</string>
    <string name="syllabus_teacher_name">授業担当氏名</string>
    <string name="syllabus_weekday">曜日</string>
    <string name="syllabus_time">時限</string>

    <!--ダイアログのメッセージ-->
    <string name="dialog_title_search_result">検索結果</string>
    <string name="dialog_message_search_result_syllabus">入力条件に該当するシラバスが存在しません</string>
    <string name="dialog_message_search_result_place">入力条件に該当するデータが存在しません</string>
    <string name="dialog_message_search_result_notExists">該当データが存在しません</string>

    <!--エラー時のメッセージ-->
    <string name="error_title_data_response">取得失敗</string>
    <string name="error_message_response_refuse">データの取得に失敗しました</string>
    <string name="error_message_data_invalid">取得したデータが不正です</string>
    <string name="error_message_input_invalid">入力したデータが不正です</string>

    <!--シラバス閲覧のリストビューのヘッダ-->
    <string name="syllabus_place">講義場所</string>
    <string name="syllabus_basic">基本データ</string>
    <string name="syllabus_contents">講義内容</string>
    <string name="syllabus_teacher_list">担当教員一覧</string>

    <!--シラバス閲覧の講義場所のテキスト-->
    <string name="syllabus_place_message">※正しい場所であるとは限りません</string>
    <string name="syllabus_place_not_found">特定できませんでした</string>
    <string name="syllabus_place_not_found_message">教室配当表を確認してください</string>

    <!--教室配当表の検索モード選択のボタン-->
    <string name="places_search_mode_all">全一覧から探す</string>
    <string name="places_search_mode_classname">授業名から探す</string>
    <string name="places_search_mode_building">建物別から探す</string>

    <!--教室配当表のタブ名のテキスト-->
    <string-array name="tab_weekday">
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
    </string-array>

    <!--教室配当検索のフォームの項目名-->
    <string name="places_class_name">授業名称</string>
    <string name="places_teacher_name">授業担当者名</string>
    <string name="places_weekday">曜日</string>
    <string name="places_time">時限</string>

    <!--教室配当検索のフォームの検索データ-->
    <string-array name="places_search_data_weekday">
        <item>指定なし</item>
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
    </string-array>
    <string-array name="places_search_data_time">
        <item>指定なし</item>
        <item>1.2限</item>
        <item>3.4限</item>
        <item>5.6限</item>
        <item>7.8限</item>
        <item>9.10限</item>
    </string-array>

    <!--休講情報の項目-->
    <string-array name="cancel_info_section">
        <item>授業名</item>
        <item>日付・時限</item>
        <item>分類</item>
        <item>グループ</item>
        <item>講師名</item>
        <item>教室</item>
        <item>備考</item>
    </string-array>

    <!--講義の時間(１コマ〜５コマ)-->
    <string-array name="time_period">
        <item>1.2限 (1コマ)</item>
        <item>3.4限 (2コマ)</item>
        <item>5.6限 (3コマ)</item>
        <item>7.8限 (4コマ)</item>
        <item>9.10限 (5コマ)</item>
        <item>11.12限 (6コマ)</item>
        <item>13.14限 (7コマ)</item>
    </string-array>
    <string-array name="time_period_m">
        <item> 8:30〜10:00</item>
        <item>10:15〜11:45</item>
        <item>12:45〜14:15</item>
        <item>14:30〜16:00</item>
        <item>16:15〜17:45</item>
        <item>18:00〜19:30</item>
        <item>19:45〜21:15</item>
    </string-array>

    <!--曜日の配列-->
    <string-array name="weekday">
        <item>月曜日</item>
        <item>火曜日</item>
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
        <item>日曜日</item>
        <item>不明</item>
    </string-array>

    <!--メッセージ-->
    <string name="message_now_loading">データ取得中...</string>

    <!--単位-->
    <string name="results">件</string><!--検索結果の件数-->


</resources>
