<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_syllabus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/syllabus_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form1" />

    <TextView
        android:text="@string/syllabus_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form2" />

    <TextView
        android:text="@string/syllabus_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/form3" />

    <TextView
        android:text="@string/syllabus_teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/form4" />

    <TextView
        android:text="@string/syllabus_weekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form5" />

    <TextView
        android:text="@string/syllabus_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:text="@string/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear" />

        <Button
            android:text="@string/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_search" />
    </LinearLayout>

</LinearLayout>
